<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="password_length">Password tidak boleh kurang dari 8 karakter!</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="welcome_text" tools:ignore="MissingTranslation">Butuh tempat membagikan kegiatan bangkitmu? Yuk join di Bangkit Story</string>
    <string name="title_welcome_page">Bangkit Story!</string>
    <string name="title_register_page">Silahkan Lengkapi Terlebih Dahulu Data Diri Berikut </string>
    <string name="pesan_login" translatable="false">Silahkan Masukkan Data Dirimu</string>
    <string name="title_register">Daftar</string>
    <string name="login_judul" translatable="false"> Selamat Datang di Bangkit Story</string>
    <string name="title_login">Login</string>
    <string name="email">Email</string>
    <string name="email_validation">Alamat email tidak valid!</string>
    <string name="password">Password</string>
    <string name="required_field">Field tidak boleh kosong!</string>
    <string name="name">Nama</string>
    <string name="username">Halo, %1$s</string>
    <string name="logout">Keluar</string>
    <string name="input_image">Silahkan masukan file gambar!</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="story_detail">Detail Cerita</string>
    <string name="title_add_story">Tambah Cerita</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="open_file">Buka Gambar</string>
    <string name="desc">Deskripsi Gambar</string>
    <string name="upload_picture">Upload Gambar</string>
    <string name="story">Cerita</string>
    <string name="retry">muat ulang</string>
    <string name="language">Ganti Bahasa</string>
    <string name="welcome_page" tools:ignore="MissingTranslation">SELAMAT DATANG</string>


</resources>